Wildcard volatile OpenAPI fields when regenerating ITEST goldens
The bulk golden-update helper now replaces description, summary, operationId and version with *** before writing, so the golden no longer churns on every wording, ordering or version change, and it writes the body in CRLF to match the rest of the response file. The value is matched with a greedy single-line pattern; a per-character group overflowed the stack on long descriptions.